# cpy-dataio

./: .gitignore  CMakeLists.txt
apps/: test.c
include/: cpydataio.h  data_reader.h  data_recorder.h  file_handle.h  screen_print.h
src/: data_reader.c  data_recorder.c  file_handle.c  screen_print.c
